--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "taskflow/gestionnaire-taches",
     "description": "Gestionnaire de Tâches - TaskFlow",
     "require": {
-        "phpmailer/phpmailer": "^6.9"
+        "phpmailer/phpmailer": "^6.9",
+        "vlucas/phpdotenv": "^5.6"
     }
 }
